Fix scrollbar overlapping thumbs

--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,7 @@ footer img {
   overflow-x: auto;
   gap: 8px;
   margin-top: 8px;
+  padding-bottom: 16px;
 }
 
 .thumbnail {
